# dataport

./: Cargo.toml  Makefile.toml  README.md
macros/: Cargo.toml
macros/src/: lib.rs
macros/tests/: all.rs
mcdc/html/: index.html
mcdc/html/coverage/home/stephan/.dbx/dimas/dataport/src/: any_port_value.rs.html  error.rs.html  port_variant.rs.html
mcdc/html/coverage/home/stephan/.dbx/dimas/dataport/src/bind/: in_out_port.rs.html  in_port.rs.html  out_port.rs.html  port_value.rs.html  sequence_number.rs.html
mcdc/html/coverage/home/stephan/.dbx/dimas/dataport/src/collections/: mod.rs.html  port_array.rs.html  port_list.rs.html  port_map.rs.html
src/: any_extensions.rs  any_port.rs  any_port_value.rs  error.rs  guards.rs  in_out_port.rs  in_port.rs  lib.rs  out_port.rs  port.rs  port_array.rs  port_base.rs  port_data.rs  port_data_base.rs  port_declaration.rs  port_hub.rs  port_implementation.rs  port_list.rs  port_traits.rs  port_value.rs  port_variant.rs  prelude.rs  sequence_number.rs  traits.rs
src/bind/: any_port_value.rs  in_out_port.rs  in_port.rs  mod.rs  out_port.rs  port_value.rs  sequence_number.rs
src/collections/: mod.rs  port_array.rs  port_list.rs  port_map.rs  port_vec.rs
src/flow/: mod.rs
supply-chain/: config.toml
tests/: api.rs  bindings.rs  concept.rs  concepts.rs  in_out_port.rs  in_port.rs  out_port.rs  port.rs  port_array.rs  port_base.rs  port_data_base.rs  port_hub.rs  port_list.rs
tests/bind/: binding.rs  in_out_port.rs  in_port.rs  out_port.rs
tests/collections/: mod.rs  port_array.rs  port_list.rs  port_map.rs  port_vec.rs
tests/error/: mod.rs
tests/flow/: in_port.rs
tests/port_variant/: mod.rs
tests/usage/: mod.rs
tests/usage/array/: constgen.rs  empty.rs  minimal.rs
tests/usage/list/: constgen.rs  empty.rs  minimal.rs  mod.rs
tests/usage/macros/: mod.rs
tests/usage/map/: constgen.rs  empty.rs  minimal.rs
