# Copyright © 2025 Stephan Kunz
[package]
resolver = "3"
name = "dataport-macros"
authors = ["stepkun <stephan.kunz@kabelbw.de>"]
description = "Macros for dataport"
edition = "2024"
version = "0.1.0"
rust-version = "1.90.0"
#license = "NGMC"
license-file = "LICENSE"
repository = "https://github.com/stepkun/dataport.git"
homepage = "https://github.com/stepkun/dataport"
documentation = "https://docs.rs/dataport-macros/latest/dataport-macros/"
readme = "README.md"
exclude = ["laze*", "benches/**", "embedded/**", "examples/**", "tests/**"]

[lib]
proc-macro = true

[lints.rust]
missing_docs = "warn"
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(context, values(any()))',
] }
unsafe_code = "warn"
unused_must_use = "warn"

[lints.rustdoc]
private_intra_doc_links = "allow"

[lints.clippy]
enum_glob_use = "deny"
expect_used = "deny"
nursery = { level = "deny", priority = -1 }
panic = "deny"
pedantic = { level = "deny", priority = -1 }
unwrap_used = "deny"

#[[test]]
#name = "tests"
#path = "tests/all.rs"

[dependencies]
darling = "0.23"
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = [] }

[build-dependencies]

[dev-dependencies]
dataport = { path = "../" }
trybuild = { version = "1", features = ["diff"] }
